--- a/config.toml
+++ b/config.toml
@@ -371,6 +371,11 @@ disable404 = true
     level = "80%"
 	
 	[[params.softskills.list]]
+    skill = "Problem Solving"
+    level = "90%"
+	
+	
+	[[params.softskills.list]]
     skill = "Proactive"
     level = "90%"
 	
