--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ disable404 = true
     # Profile section
     [params.profile]
         name = "Markus Sommerfeld"
-        tagline = "Futurist, Researcher and Engineer"
+        tagline = "PhD in Mechanical Engineering <br> Wind Energy Researcher <br> Project & Testing Engineer"
 		#birthday = "3 February 1987"
 		#location = "Victoria, BC, Canada"
         avatar = "profile.png"
