--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,8 @@ disable404 = true
     # Profile section
     [params.profile]
         name = "Markus Sommerfeld"
-        tagline = "PhD in Mechanical Engineering <br> Wind Energy Researcher <br> Project & Testing Engineer"
+        tagline = "PhD in Mechanical Engineering 
+		Wind Energy Researcher <br> Project & Testing Engineer"
 		#birthday = "3 February 1987"
 		#location = "Victoria, BC, Canada"
         avatar = "profile.png"
@@ -160,7 +161,7 @@ disable404 = true
         title = "Interests"		
     
         [[params.interests.list]]
-        interest = "Family"
+        interest = "Going  to the playground with my daughter"
 		icon = "fa fa-home"
 
         [[params.interests.list]]
