--- a/config.toml
+++ b/config.toml
@@ -129,7 +129,7 @@ disable404 = true
         dates = "2008 - 2014"
     	
         [[params.education.list]]
-        degree = "High School Diploma"
+        degree = "High School"
         college = "Paul Schneider Gymnasium, Meisenheim, Germany"
         dates = "1997 - 2007"
     
