--- a/config.toml
+++ b/config.toml
@@ -180,7 +180,7 @@ disable404 = true
 		icon = "fa fa-cogs"
 		
 	   [[params.interests.list]]
-        interest = "Sharing vegan and vegetarian meals with friends"
+        interest = "Experimenting & sharing vegan and vegetarian meals with friends (I am not vegan)"
 		icon = "fa fa-cutlery"
 
 # Main body sections
