--- a/config.toml
+++ b/config.toml
@@ -171,17 +171,17 @@ disable404 = true
         interest = "Learning Japanese"
 		icon = "fa fa-puzzle-piece"
         
-		#[[params.interests.list]]
-		#interest = "Inventing stuff"
-		#icon = "fa fa-cogs"
+		[[params.interests.list]]
+		interest = "Inventing stuff"
+		icon = "fa fa-cogs"
 
 		[[params.interests.list]]
 		interest = "Working on website"
 		icon = "fa fa-cogs"
 		
-	   [[params.interests.list]]
-        interest = "Trying out vegan and vegetarian meals with friends (I am not vegan)"
-		icon = "fa fa-cutlery"
+	   #[[params.interests.list]]
+        #interest = "Trying out vegan and vegetarian meals with friends (I am not vegan)"
+		#icon = "fa fa-cutlery"
 
 # Main body sections
 
