--- a/config.toml
+++ b/config.toml
@@ -164,7 +164,7 @@ disable404 = true
 		icon = "fa fa-home"
 
         [[params.interests.list]]
-        interest = "Crossfit workouts"
+        interest = "Crossfit workouts with friends"
 		icon = "fa fa-bomb"
 
         [[params.interests.list]]
@@ -179,9 +179,9 @@ disable404 = true
 		interest = "Work on website"
 		icon = "fa fa-rebel"
 		
-	   #[[params.interests.list]]
-        #interest = "Try out vegan and vegetarian meals with friends (I am not vegan)"
-		#icon = "fa fa-cutlery"
+		[[params.interests.list]]
+        interest = "Try out vegan and vegetarian recipes"
+		icon = "fa fa-cutlery"
 
 # Main body sections
 
@@ -193,7 +193,7 @@ disable404 = true
 		enable = true
 		icon = "fa-user"
 		title = "Career Profile"
-		summary = "Master and PhD in Mechanical engineering with structure test leadership experience and proven skills in wind modeling, programming, data analysis and mechanical design. My research on airborne wind energy systems combines wind resource assessment, via LiDAR measurements and WRF weather simulations, with aircraft modeling and trajectory optimization. Together with international teams in Germany and Japan, I planned and organized aircraft structure tests as well as solar PV certification projects. Working as a teaching assistant, tutor and student representative throughout my degrees made me an efficient communicator and taught me to manage my own time while supervising multiple small teams. <br><br> My goal is to use my wind energy expertise and passion for aerospace technologies to provide sustainable, affordable electricity and cleaner, more efficient means of transportation."    
+		summary = "Master and PhD in Mechanical engineering with structure test leadership experience and proven skills in wind modeling, programming, data analysis and mechanical design.  <br><br> <br>My research on airborne wind energy systems combines wind resource assessment, via LiDAR measurements and WRF weather simulations, with aircraft modeling and trajectory optimization. Together with international teams in Germany and Japan, I planned and organized aircraft structure tests as well as solar PV certification projects. Working as a teaching assistant, tutor and student representative throughout my degrees made me an efficient communicator and taught me to manage my own time while supervising multiple small teams. <br><br> My goal is to use my wind energy expertise and passion for aerospace technologies to provide sustainable, affordable electricity and cleaner, more efficient means of transportation."    
 
 
 	# Experiences section
