--- a/config.toml
+++ b/config.toml
@@ -202,7 +202,7 @@ disable404 = true
 	[params.experiences]
 	    enable = true
 	    icon = "fa-briefcase"
-	    title = "Experiences"
+	    title = "Work Experience"
 	
 	    [[params.jobs.list]]
 	    position = "PhD in Mechanical Engineering"
