--- a/config.toml
+++ b/config.toml
@@ -201,9 +201,9 @@ disable404 = true
 	    dates = "April 2021 - April 2023"
 	    company = "New Leaf Management, Vancouver BC, Canada, Vancouver BC, Canada"
 	   # project = "Project: Research and development of a hydraulic Airborne Wind Energy ground station"
-	    details = "bullet 1
-        bullet 2
-        bullet 3"
+	    details = "* Red
+                    * Green
+                    * Blue"
 
 	    [[params.jobs.list]]
 	    position = "PhD in Mechanical Engineering"
