--- a/config.toml
+++ b/config.toml
@@ -201,7 +201,7 @@ disable404 = true
 	    dates = "April 2021 - April 2023"
 	    company = "New Leaf Management, Vancouver BC, Canada, Vancouver BC, Canada"
 	   # project = "Project: Research and development of a hydraulic Airborne Wind Energy ground station"
-	    details = "Led **a project** to develop and _refactor_ a detailed simulation toolbox for hydraulic piston motor models in Matlab Simulink. 100. First list item.        test."
+	    details = ["Led **a project** to develop and _refactor_ a detailed simulation toolbox for hydraulic piston motor models in Matlab Simulink. 100. First list item.        test." <br> "test"]
 
 	    [[params.jobs.list]]
 	    position = "PhD in Mechanical Engineering"
